# lera

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  justfile
.cargo/: config.toml
crates/: justfile
crates/lera/: Cargo.toml
crates/lera/src/: lib.rs
crates/lera/src/bindgen/: lera_build.rs  mod.rs  post_process.rs  post_process_kotlin.rs  post_process_shared.rs  post_process_swift.rs
crates/lera/src/logging/: mod.rs
crates/lera/templates/: view_model.kt.jinja  view_model.swift.jinja
crates/lera/tests/: test_log.rs
crates/lera_macros/: Cargo.toml
crates/lera_macros/src/: lib.rs
crates/lera_uniffi_build/: Cargo.toml
crates/lera_uniffi_build/src/: cargo_utils.rs  lib.rs  uniffi_build_android.rs  uniffi_build_android_cli.rs  uniffi_build_swift.rs  uniffi_build_swift_cli.rs
crates/samples-core/: Cargo.toml
crates/samples-core/src/: lib.rs
crates/samples-derive/: Cargo.toml
crates/samples-derive/src/: lib.rs
crates/samples-derive/tests/: derive_test.rs
example/: justfile
example/android/: build.gradle.kts  gradle.properties  justfile  settings.gradle.kts
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/lera/: MainActivity.kt
example/android/app/src/main/java/com/example/lera/ui/: CounterScreen.kt
example/android/app/src/main/java/com/example/lera/ui/theme/: Theme.kt
example/android/app/src/main/res/values/: strings.xml  themes.xml
example/android/lera/: build.gradle.kts
example/android/lera/src/test/kotlin/uniffi/counters/: CounterViewModelTest.kt  ManualOnlyCounterViewModelTest.kt  TestEnvironment.kt
example/apple/: Package.swift  justfile
example/apple/Tests/CountersSwiftTests/: CounterViewModelTests.swift  ManualOnlyCounterViewModelTests.swift
example/apple/app/: Counter.xctestplan  Package.swift  justfile
example/apple/app/Counter/: CounterApp.swift  CounterView.swift  CountersView.swift  ManualOnlyCounter.swift
example/apple/app/Counter.xcodeproj/: project.pbxproj
example/apple/app/Counter.xcodeproj/project.xcworkspace/xcuserdata/alexandercyon.xcuserdatad/: UserInterfaceState.xcuserstate
example/apple/app/Counter.xcodeproj/xcshareddata/xcschemes/: Counter.xcscheme
example/apple/app/Counter.xcodeproj/xcuserdata/alexandercyon.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
example/rust/: Cargo.toml  build.rs  justfile
example/rust/src/: android_build.rs  background_task.rs  counter.rs  lib.rs  manual_only_counter.rs  swift_build.rs
example/rust/src/helpers/: interval.rs  mod.rs  navigator.rs
example/rust/src/models/: counter.rs  counters.rs  manual_only_counter.rs  mod.rs
example/rust/tests/: counter_model_test.rs
example/rust/tests/bindings/: test_counter_model.kts  test_counter_model.swift
