[workspace]
members = [
    "crates/lera",
    "crates/lera_macros",
    "crates/lera_uniffi_build",
    "crates/samples-core",
    "crates/samples-derive",
]
resolver = "2"
exclude = [
    "example/rust",
]

[workspace.dependencies]
# Internal dependencies
lera = { path = "crates/lera", version = "0.1.0" }
lera_macros = { path = "crates/lera_macros", version = "0.1.0" }
lera_uniffi_build = { path = "crates/lera_uniffi_build", version = "0.1.0" }
samples-core = { path = "crates/samples-core", version = "0.1.0" }
samples-derive = { path = "crates/samples-derive", version = "0.1.0" }

# External dependencies
uniffi = { version = "0.30.0", features = ["cli"] }
uniffi_bindgen = { version = "0.30.0" }
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1"
