[package]
name = "counters"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "apple-build"
path = "src/swift_build.rs"

[[bin]]
name = "android-build"
path = "src/android_build.rs"


[dependencies]
# Internal dependencies
lera = { path = "../../crates/lera" }
samples-core = { path = "../../crates/samples-core" }
samples-derive = { path = "../../crates/samples-derive" }
lera_uniffi_build = { path = "../../crates/lera_uniffi_build" }

# External dependencies
clap = { version = "4.5", features = ["derive"] }
derive_more = {version = "2.0", features = ["deref"] }
paste = "1.0.15"
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
uniffi = { version = "0.30.0" }

[dev-dependencies]
actix-rt = "2.11.0"
pretty_assertions = "1.4"
uniffi = { version = "0.30.0", features = ["bindgen-tests"] }

[build-dependencies]
uniffi = { version = "0.30.0", features = ["build"] }
